<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/botonCapitulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_1"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_2"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_3"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_4"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_5"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_6"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_7"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />
            <Button
                android:id="@+id/botonCapitulo8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/capitulo_8"
                android:onClick="botonCapituloAction"
                android:background="@drawable/botoncapitulo"
                android:textColor="@color/colorBlanco"
                android:layout_margin="@dimen/small2"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>