<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="proyecto.com.cardio.MainActivity$PlaceholderFragment"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cardviewMargin"
        android:layout_marginRight="@dimen/cardviewMargin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/parte1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basico"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                android:padding="@dimen/small"
                />
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="Retos basados en los conceptos basicos del curso de ECG."
                android:padding="@dimen/small"
                android:layout_below="@id/parte1"
                android:textSize="15sp"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_next"
                android:background="@color/colorPrimaryDark"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cardviewMargin"
        android:layout_marginRight="@dimen/cardviewMargin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/parte2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medio"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                android:padding="@dimen/small"
                />
            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:text="Retos Diseñados para mejorar las habilidades obtenidas."
                android:padding="@dimen/small"
                android:layout_below="@id/parte2"
                android:textSize="15sp"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_next"
                android:background="@color/colorPrimaryDark"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cardviewMargin"
        android:layout_marginRight="@dimen/cardviewMargin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/parte3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avanzado"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                android:padding="@dimen/small"
                />
            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:text="Retos para poner a prueba tus capacidades."
                android:padding="@dimen/small"
                android:layout_below="@id/parte3"
                android:textSize="15sp"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_next"
                android:background="@color/colorPrimaryDark"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>




</LinearLayout>
